z-index fix

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -23,7 +23,7 @@
   left: 3%;
   transform: none;
   color: #fff;
-  z-index: 2;
+  z-index: 3;
   width: auto;
 }
 
@@ -39,7 +39,7 @@
   left: 3%;
   transform: none;
   color: #fff;
-  z-index: 2;
+  z-index: 3;
   width: auto;
 }
 
